@@ -10,21 +10,20 @@ import java.util.Enumeration;
 import java.util.Hashtable;
 import java.util.List;
 import java.util.Locale;
-
 import org.hivevm.cc.Language;
 import org.hivevm.cc.generator.LexerData;
 import org.hivevm.cc.generator.LexerGenerator;
 import org.hivevm.cc.generator.NfaStateData;
+import org.hivevm.cc.generator.NfaStateData.KindInfo;
 import org.hivevm.cc.generator.TemplateProvider;
 import org.hivevm.cc.lexer.NfaState;
-import org.hivevm.cc.parser.Action;
+import org.hivevm.cc.model.Action;
+import org.hivevm.cc.model.RExpression;
+import org.hivevm.cc.model.RStringLiteral;
+import org.hivevm.cc.model.TokenProduction;
 import org.hivevm.cc.parser.JavaCCErrors;
-import org.hivevm.cc.parser.RStringLiteral;
-import org.hivevm.cc.parser.RStringLiteral.KindInfo;
 import org.hivevm.cc.parser.RegExprSpec;
-import org.hivevm.cc.parser.RegularExpression;
 import org.hivevm.cc.parser.Token;
-import org.hivevm.cc.parser.TokenProduction;
 import org.hivevm.cc.utils.Encoding;
 import org.hivevm.cc.utils.TemplateOptions;
 
@@ -40,11 +39,13 @@ class JavaLexerGenerator extends LexerGenerator {
     }
 
     TemplateOptions options = new TemplateOptions(data.options());
-    options.add(LexerGenerator.LOHI_BYTES, data.getLohiByte()).set("bytes", i -> getLohiBytes(data, i));
+    options.add(LexerGenerator.LOHI_BYTES, data.getLohiByte())
+        .set("bytes", i -> getLohiBytes(data, i));
     options.add(LexerGenerator.STATES, data.getStateNames()).set("NfaAndDfa",
         (n, w) -> dumpNfaAndDfa(data.getStateData(n), w));
     options.add(LexerGenerator.NON_ASCII_TABLE, data.getNonAsciiTableForMethod())
-        .set("NON_ASCII_METHOD", s -> s.nonAsciiMethod).set("ASCII_MOVE", (s, w) -> DumpNonAsciiMoveMethod(s, data, w));
+        .set("NON_ASCII_METHOD", s -> s.nonAsciiMethod)
+        .set("ASCII_MOVE", (s, w) -> DumpNonAsciiMoveMethod(s, data, w));
 
     options.set("LITERAL_IMAGES", () -> JavaLexerGenerator.getStrLiteralImages(data));
     options.set("STATES_FOR_STATE", () -> getStatesForState(data));
@@ -84,7 +85,7 @@ class JavaLexerGenerator extends LexerGenerator {
   }
 
   protected final void generateConstants(LexerData data) {
-    List<RegularExpression> expressions = new ArrayList<>();
+    List<RExpression> expressions = new ArrayList<>();
     for (TokenProduction tp : data.getTokenProductions()) {
       for (RegExprSpec res : tp.getRespecs()) {
         expressions.add(res.rexp);
@@ -92,19 +93,26 @@ class JavaLexerGenerator extends LexerGenerator {
     }
 
     TemplateOptions options = new TemplateOptions(data.options());
-    options.add("STATES", data.getStateCount()).set("name", i -> data.getStateName(i));
-    options.add("TOKENS", data.getOrderedsTokens()).set("ordinal", r -> r.getOrdinal()).set("label", r -> r.getLabel());
+    options.add("STATES", data.getStateCount()).set("name", data::getStateName);
+    options.add("TOKENS", data.getOrderedsTokens()).set("ordinal", RExpression::getOrdinal)
+        .set("label", RExpression::getLabel);
     options.add("PRODUCTIONS", expressions).set("label", re -> {
-      StringBuffer buffer = new StringBuffer();
+      StringBuilder buffer = new StringBuilder();
 
       if (re instanceof RStringLiteral) {
-        buffer.append("\"\\\"" + Encoding.escape(Encoding.escape(((RStringLiteral) re).getImage())) + "\\\"\"");
-      } else if (!re.getLabel().equals("")) {
-        buffer.append("\"<" + re.getLabel() + ">\"");
-      } else if (re.getTpContext().getKind() == TokenProduction.Kind.TOKEN) {
-        JavaCCErrors.warning(re, "Consider giving this non-string token a label for better error reporting.");
-      } else {
-        buffer.append("\"<token of kind " + re.getOrdinal() + ">\"");
+        buffer.append("\"\\\"")
+            .append(Encoding.escape(Encoding.escape(((RStringLiteral) re).getImage())))
+            .append("\\\"\"");
+      }
+      else if (!re.getLabel().equals("")) {
+        buffer.append("\"<").append(re.getLabel()).append(">\"");
+      }
+      else if (re.getTpContext().getKind() == TokenProduction.Kind.TOKEN) {
+        JavaCCErrors.warning(re,
+            "Consider giving this non-string token a label for better error reporting.");
+      }
+      else {
+        buffer.append("\"<token of kind ").append(re.getOrdinal()).append(">\"");
       }
 
       if (expressions.indexOf(re) < (expressions.size() - 1)) {
@@ -134,7 +142,8 @@ class JavaLexerGenerator extends LexerGenerator {
 
         if (data.newLexState(i) == null) {
           writer.print("-1, ");
-        } else {
+        }
+        else {
           writer.print(data.getStateIndex(data.newLexState(i)) + ", ");
         }
       }
@@ -233,19 +242,28 @@ class JavaLexerGenerator extends LexerGenerator {
       if (data.singlesToSkip(i).HasTransitions()) {
         // added the backup(0) to make JIT happy
         writer.println(prefix + "try { input_stream.backup(0);");
-        if ((data.singlesToSkip(i).asciiMoves[0] != 0L) && (data.singlesToSkip(i).asciiMoves[1] != 0L)) {
+        if ((data.singlesToSkip(i).asciiMoves[0] != 0L) && (data.singlesToSkip(i).asciiMoves[1]
+            != 0L)) {
           writer.println(
-              prefix + "   while ((curChar < 64" + " && (0x" + Long.toHexString(data.singlesToSkip(i).asciiMoves[0])
-                  + "L & (1L << curChar)) != 0L) || \n" + prefix + "          (curChar >> 6) == 1" + " && (0x"
-                  + Long.toHexString(data.singlesToSkip(i).asciiMoves[1]) + "L & (1L << (curChar & 077))) != 0L)");
-        } else if (data.singlesToSkip(i).asciiMoves[1] == 0L) {
+              prefix + "   while ((curChar < 64" + " && (0x" + Long.toHexString(
+                  data.singlesToSkip(i).asciiMoves[0])
+                  + "L & (1L << curChar)) != 0L) || \n" + prefix + "          (curChar >> 6) == 1"
+                  + " && (0x"
+                  + Long.toHexString(data.singlesToSkip(i).asciiMoves[1])
+                  + "L & (1L << (curChar & 077))) != 0L)");
+        }
+        else if (data.singlesToSkip(i).asciiMoves[1] == 0L) {
           writer.println(
-              prefix + "   while (curChar <= " + (int) LexerGenerator.MaxChar(data.singlesToSkip(i).asciiMoves[0])
-                  + " && (0x" + Long.toHexString(data.singlesToSkip(i).asciiMoves[0]) + "L & (1L << curChar)) != 0L)");
-        } else if (data.singlesToSkip(i).asciiMoves[0] == 0L) {
+              prefix + "   while (curChar <= " + (int) LexerGenerator.MaxChar(
+                  data.singlesToSkip(i).asciiMoves[0])
+                  + " && (0x" + Long.toHexString(data.singlesToSkip(i).asciiMoves[0])
+                  + "L & (1L << curChar)) != 0L)");
+        }
+        else if (data.singlesToSkip(i).asciiMoves[0] == 0L) {
           writer.println(prefix + "   while (curChar > 63 && curChar <= "
               + (LexerGenerator.MaxChar(data.singlesToSkip(i).asciiMoves[1]) + 64) + " && (0x"
-              + Long.toHexString(data.singlesToSkip(i).asciiMoves[1]) + "L & (1L << (curChar & 077))) != 0L)");
+              + Long.toHexString(data.singlesToSkip(i).asciiMoves[1])
+              + "L & (1L << (curChar & 077))) != 0L)");
         }
 
         if (data.options().getDebugTokenManager()) {
@@ -266,15 +284,18 @@ class JavaLexerGenerator extends LexerGenerator {
 
       if ((data.initMatch(i) != Integer.MAX_VALUE) && (data.initMatch(i) != 0)) {
         if (data.options().getDebugTokenManager()) {
-          writer.println("      debugStream.println(\"   Matched the empty string as \" + tokenImage["
-              + data.initMatch(i) + "] + \" token.\");");
+          writer.println(
+              "      debugStream.println(\"   Matched the empty string as \" + tokenImage["
+                  + data.initMatch(i) + "] + \" token.\");");
         }
 
         writer.println(prefix + "jjmatchedKind = " + data.initMatch(i) + ";");
         writer.println(prefix + "jjmatchedPos = -1;");
         writer.println(prefix + "curPos = 0;");
-      } else {
-        writer.println(prefix + "jjmatchedKind = 0x" + Integer.toHexString(Integer.MAX_VALUE) + ";");
+      }
+      else {
+        writer.println(
+            prefix + "jjmatchedKind = 0x" + Integer.toHexString(Integer.MAX_VALUE) + ";");
         writer.println(prefix + "jjmatchedPos = 0;");
       }
 
@@ -290,14 +311,17 @@ class JavaLexerGenerator extends LexerGenerator {
         if ((data.initMatch(i) != Integer.MAX_VALUE) && (data.initMatch(i) != 0)) {
           writer.println(prefix + "if (jjmatchedPos < 0 || (jjmatchedPos == 0 && jjmatchedKind > "
               + data.canMatchAnyChar(i) + "))");
-        } else {
-          writer.println(prefix + "if (jjmatchedPos == 0 && jjmatchedKind > " + data.canMatchAnyChar(i) + ")");
+        }
+        else {
+          writer.println(
+              prefix + "if (jjmatchedPos == 0 && jjmatchedKind > " + data.canMatchAnyChar(i) + ")");
         }
         writer.println(prefix + "{");
 
         if (data.options().getDebugTokenManager()) {
-          writer.println("           debugStream.println(\"   Current character matched as a \" + tokenImage["
-              + data.canMatchAnyChar(i) + "] + \" token.\");");
+          writer.println(
+              "           debugStream.println(\"   Current character matched as a \" + tokenImage["
+                  + data.canMatchAnyChar(i) + "] + \" token.\");");
         }
         writer.println(prefix + "   jjmatchedKind = " + data.canMatchAnyChar(i) + ";");
 
@@ -315,18 +339,21 @@ class JavaLexerGenerator extends LexerGenerator {
 
     if (data.maxLexStates() > 1) {
       writer.println(endSwitch);
-    } else if (data.maxLexStates() == 0) {
+    }
+    else if (data.maxLexStates() == 0) {
       writer.println("       jjmatchedKind = 0x" + Integer.toHexString(Integer.MAX_VALUE) + ";");
     }
 
     if (data.maxLexStates() > 1) {
       prefix = "  ";
-    } else {
+    }
+    else {
       prefix = "";
     }
 
     if (data.maxLexStates() > 0) {
-      writer.println(prefix + "   if (jjmatchedKind != 0x" + Integer.toHexString(Integer.MAX_VALUE) + ")");
+      writer.println(
+          prefix + "   if (jjmatchedKind != 0x" + Integer.toHexString(Integer.MAX_VALUE) + ")");
       writer.println(prefix + "   {");
       writer.println(prefix + "      if (jjmatchedPos + 1 < curPos)");
 
@@ -343,14 +370,16 @@ class JavaLexerGenerator extends LexerGenerator {
       }
 
       if (data.options().getDebugTokenManager()) {
-        writer.println("    debugStream.println(" + "\"****** FOUND A \" + tokenImage[jjmatchedKind] + \" MATCH "
+        writer.println("    debugStream.println("
+            + "\"****** FOUND A \" + tokenImage[jjmatchedKind] + \" MATCH "
             + "(\" + TokenException.addEscapes(new String(input_stream.GetSuffix(jjmatchedPos + 1))) + "
             + "\") ******\\n\");");
       }
 
       if (data.hasSkip() || data.hasMore() || data.hasSpecial()) {
         writer
-            .println(prefix + "      if ((jjtoToken[jjmatchedKind >> 6] & " + "(1L << (jjmatchedKind & 077))) != 0L)");
+            .println(prefix + "      if ((jjtoToken[jjmatchedKind >> 6] & "
+                + "(1L << (jjmatchedKind & 077))) != 0L)");
         writer.println(prefix + "      {");
       }
 
@@ -377,8 +406,10 @@ class JavaLexerGenerator extends LexerGenerator {
         if (data.hasSkip() || data.hasSpecial()) {
           if (data.hasMore()) {
             writer.println(
-                prefix + "      else if ((jjtoSkip[jjmatchedKind >> 6] & " + "(1L << (jjmatchedKind & 077))) != 0L)");
-          } else {
+                prefix + "      else if ((jjtoSkip[jjmatchedKind >> 6] & "
+                    + "(1L << (jjmatchedKind & 077))) != 0L)");
+          }
+          else {
             writer.println(prefix + "      else");
           }
 
@@ -386,7 +417,8 @@ class JavaLexerGenerator extends LexerGenerator {
 
           if (data.hasSpecial()) {
             writer.println(
-                prefix + "         if ((jjtoSpecial[jjmatchedKind >> 6] & " + "(1L << (jjmatchedKind & 077))) != 0L)");
+                prefix + "         if ((jjtoSpecial[jjmatchedKind >> 6] & "
+                    + "(1L << (jjmatchedKind & 077))) != 0L)");
             writer.println(prefix + "         {");
 
             writer.println(prefix + "            matchedToken = jjFillToken();");
@@ -396,7 +428,8 @@ class JavaLexerGenerator extends LexerGenerator {
             writer.println(prefix + "            else");
             writer.println(prefix + "            {");
             writer.println(prefix + "               matchedToken.specialToken = specialToken;");
-            writer.println(prefix + "               specialToken = (specialToken.next = matchedToken);");
+            writer.println(
+                prefix + "               specialToken = (specialToken.next = matchedToken);");
             writer.println(prefix + "            }");
 
             if (data.hasSkipActions()) {
@@ -409,7 +442,8 @@ class JavaLexerGenerator extends LexerGenerator {
               writer.println(prefix + "         else");
               writer.println(prefix + "            SkipLexicalActions(null);");
             }
-          } else if (data.hasSkipActions()) {
+          }
+          else if (data.hasSkipActions()) {
             writer.println(prefix + "         SkipLexicalActions(null);");
           }
 
@@ -425,7 +459,8 @@ class JavaLexerGenerator extends LexerGenerator {
         if (data.hasMore()) {
           if (data.hasMoreActions()) {
             writer.println(prefix + "      MoreLexicalActions();");
-          } else if (data.hasSkipActions() || data.hasTokenActions()) {
+          }
+          else if (data.hasSkipActions() || data.hasTokenActions()) {
             writer.println(prefix + "      jjimageLen += jjmatchedPos + 1;");
           }
 
@@ -434,7 +469,8 @@ class JavaLexerGenerator extends LexerGenerator {
             writer.println(prefix + "      curLexState = jjnewLexState[jjmatchedKind];");
           }
           writer.println(prefix + "      curPos = 0;");
-          writer.println(prefix + "      jjmatchedKind = 0x" + Integer.toHexString(Integer.MAX_VALUE) + ";");
+          writer.println(
+              prefix + "      jjmatchedKind = 0x" + Integer.toHexString(Integer.MAX_VALUE) + ";");
 
           writer.println(prefix + "      try {");
           writer.println(prefix + "         curChar = input_stream.readChar();");
@@ -488,7 +524,7 @@ class JavaLexerGenerator extends LexerGenerator {
         continue;
       }
 
-      for (;;) {
+      for (; ; ) {
         Action act = data.actions(i);
         if (((act == null) || act.getActionTokens().isEmpty()) && !data.canLoop(data.getState(i))) {
           continue Outer;
@@ -500,14 +536,18 @@ class JavaLexerGenerator extends LexerGenerator {
           writer.println("         if (jjmatchedPos == -1)");
           writer.println("         {");
           writer.println("            if (jjbeenHere[" + data.getState(i) + "] &&");
-          writer.println("                jjemptyLineNo[" + data.getState(i) + "] == input_stream.getBeginLine() &&");
-          writer.println("                jjemptyColNo[" + data.getState(i) + "] == input_stream.getBeginColumn())");
+          writer.println("                jjemptyLineNo[" + data.getState(i)
+              + "] == input_stream.getBeginLine() &&");
+          writer.println("                jjemptyColNo[" + data.getState(i)
+              + "] == input_stream.getBeginColumn())");
           writer.println("               throw new TokenException("
               + "(\"Error: Bailing out of infinite loop caused by repeated empty string matches "
               + "at line \" + input_stream.getBeginLine() + \", "
               + "column \" + input_stream.getBeginColumn() + \".\"), TokenException.LOOP_DETECTED);");
-          writer.println("            jjemptyLineNo[" + data.getState(i) + "] = input_stream.getBeginLine();");
-          writer.println("            jjemptyColNo[" + data.getState(i) + "] = input_stream.getBeginColumn();");
+          writer.println(
+              "            jjemptyLineNo[" + data.getState(i) + "] = input_stream.getBeginLine();");
+          writer.println("            jjemptyColNo[" + data.getState(i)
+              + "] = input_stream.getBeginColumn();");
           writer.println("            jjbeenHere[" + data.getState(i) + "] = true;");
           writer.println("         }");
         }
@@ -520,11 +560,13 @@ class JavaLexerGenerator extends LexerGenerator {
         if (data.getImage(i) != null) {
           writer.println("(jjstrLiteralImages[" + i + "]);");
           writer.println("        lengthOfMatch = jjstrLiteralImages[" + i + "].length();");
-        } else {
-          writer.println("(input_stream.GetSuffix(jjimageLen + (lengthOfMatch = jjmatchedPos + 1)));");
+        }
+        else {
+          writer.println(
+              "(input_stream.GetSuffix(jjimageLen + (lengthOfMatch = jjmatchedPos + 1)));");
         }
 
-        genTokenSetup(act.getActionTokens().get(0));
+        genTokenSetup(act.getActionTokens().getFirst());
         resetColumn();
 
         for (Token element : act.getActionTokens()) {
@@ -546,7 +588,7 @@ class JavaLexerGenerator extends LexerGenerator {
         continue;
       }
 
-      for (;;) {
+      for (; ; ) {
         Action act = data.actions(i);
         if (((act == null) || act.getActionTokens().isEmpty()) && !data.canLoop(data.getState(i))) {
           continue Outer;
@@ -558,14 +600,18 @@ class JavaLexerGenerator extends LexerGenerator {
           writer.println("         if (jjmatchedPos == -1)");
           writer.println("         {");
           writer.println("            if (jjbeenHere[" + data.getState(i) + "] &&");
-          writer.println("                jjemptyLineNo[" + data.getState(i) + "] == input_stream.getBeginLine() &&");
-          writer.println("                jjemptyColNo[" + data.getState(i) + "] == input_stream.getBeginColumn())");
+          writer.println("                jjemptyLineNo[" + data.getState(i)
+              + "] == input_stream.getBeginLine() &&");
+          writer.println("                jjemptyColNo[" + data.getState(i)
+              + "] == input_stream.getBeginColumn())");
           writer.println("               throw new TokenException("
               + "(\"Error: Bailing out of infinite loop caused by repeated empty string matches "
               + "at line \" + input_stream.getBeginLine() + \", "
               + "column \" + input_stream.getBeginColumn() + \".\"), TokenException.LOOP_DETECTED);");
-          writer.println("            jjemptyLineNo[" + data.getState(i) + "] = input_stream.getBeginLine();");
-          writer.println("            jjemptyColNo[" + data.getState(i) + "] = input_stream.getBeginColumn();");
+          writer.println(
+              "            jjemptyLineNo[" + data.getState(i) + "] = input_stream.getBeginLine();");
+          writer.println("            jjemptyColNo[" + data.getState(i)
+              + "] = input_stream.getBeginColumn();");
           writer.println("            jjbeenHere[" + data.getState(i) + "] = true;");
           writer.println("         }");
         }
@@ -578,12 +624,13 @@ class JavaLexerGenerator extends LexerGenerator {
 
         if (data.getImage(i) != null) {
           writer.println("(jjstrLiteralImages[" + i + "]);");
-        } else {
+        }
+        else {
           writer.println("(input_stream.GetSuffix(jjimageLen));");
         }
 
         writer.println("         jjimageLen = 0;");
-        genTokenSetup(act.getActionTokens().get(0));
+        genTokenSetup(act.getActionTokens().getFirst());
         resetColumn();
 
         for (Token element : act.getActionTokens()) {
@@ -608,8 +655,9 @@ class JavaLexerGenerator extends LexerGenerator {
         continue;
       }
 
-      for (;;) {
-        if ((((act = data.actions(i)) == null) || act.getActionTokens().isEmpty()) && !data.canLoop(data.getState(i))) {
+      for (; ; ) {
+        if ((((act = data.actions(i)) == null) || act.getActionTokens().isEmpty()) && !data.canLoop(
+            data.getState(i))) {
           continue Outer;
         }
 
@@ -619,14 +667,18 @@ class JavaLexerGenerator extends LexerGenerator {
           writer.println("         if (jjmatchedPos == -1)");
           writer.println("         {");
           writer.println("            if (jjbeenHere[" + data.getState(i) + "] &&");
-          writer.println("                jjemptyLineNo[" + data.getState(i) + "] == input_stream.getBeginLine() &&");
-          writer.println("                jjemptyColNo[" + data.getState(i) + "] == input_stream.getBeginColumn())");
+          writer.println("                jjemptyLineNo[" + data.getState(i)
+              + "] == input_stream.getBeginLine() &&");
+          writer.println("                jjemptyColNo[" + data.getState(i)
+              + "] == input_stream.getBeginColumn())");
           writer.println("               throw new TokenException("
               + "(\"Error: Bailing out of infinite loop caused by repeated empty string matches "
               + "at line \" + input_stream.getBeginLine() + \", "
               + "column \" + input_stream.getBeginColumn() + \".\"), TokenException.LOOP_DETECTED);");
-          writer.println("            jjemptyLineNo[" + data.getState(i) + "] = input_stream.getBeginLine();");
-          writer.println("            jjemptyColNo[" + data.getState(i) + "] = input_stream.getBeginColumn();");
+          writer.println(
+              "            jjemptyLineNo[" + data.getState(i) + "] = input_stream.getBeginLine();");
+          writer.println("            jjemptyColNo[" + data.getState(i)
+              + "] = input_stream.getBeginColumn();");
           writer.println("            jjbeenHere[" + data.getState(i) + "] = true;");
           writer.println("         }");
         }
@@ -637,18 +689,21 @@ class JavaLexerGenerator extends LexerGenerator {
 
         if (i == 0) {
           writer.println("      image.setLength(0);"); // For EOF no image is there
-        } else {
+        }
+        else {
           writer.print("        image.append");
 
           if (data.getImage(i) != null) {
             writer.println("(jjstrLiteralImages[" + i + "]);");
             writer.println("        lengthOfMatch = jjstrLiteralImages[" + i + "].length();");
-          } else {
-            writer.println("(input_stream.GetSuffix(jjimageLen + (lengthOfMatch = jjmatchedPos + 1)));");
+          }
+          else {
+            writer.println(
+                "(input_stream.GetSuffix(jjimageLen + (lengthOfMatch = jjmatchedPos + 1)));");
           }
         }
 
-        genTokenSetup(act.getActionTokens().get(0));
+        genTokenSetup(act.getActionTokens().getFirst());
         resetColumn();
 
         for (Token element : act.getActionTokens()) {
@@ -667,7 +722,7 @@ class JavaLexerGenerator extends LexerGenerator {
     int cnt = 0;
 
     writer.print("static final int[] jjnextStates = {");
-    if (data.getOrderedStateSet().size() > 0) {
+    if (!data.getOrderedStateSet().isEmpty()) {
       for (int[] set : data.getOrderedStateSet()) {
         for (int element : set) {
           if ((cnt++ % 16) == 0) {
@@ -677,7 +732,8 @@ class JavaLexerGenerator extends LexerGenerator {
           writer.print(element + ", ");
         }
       }
-    } else {
+    }
+    else {
       writer.print("0");
     }
 
@@ -699,11 +755,14 @@ class JavaLexerGenerator extends LexerGenerator {
     PrintWriter writer = new PrintWriter(buffer);
     for (i = 0; i < data.getImageCount(); i++) {
       if (((image = data.getImage(i)) == null)
-          || (((data.toSkip(i / 64) & (1L << (i % 64))) == 0L) && ((data.toMore(i / 64) & (1L << (i % 64))) == 0L)
-              && ((data.toToken(i / 64) & (1L << (i % 64))) == 0L))
-          || ((data.toSkip(i / 64) & (1L << (i % 64))) != 0L) || ((data.toMore(i / 64) & (1L << (i % 64))) != 0L)
+          || (((data.toSkip(i / 64) & (1L << (i % 64))) == 0L) && (
+          (data.toMore(i / 64) & (1L << (i % 64))) == 0L)
+          && ((data.toToken(i / 64) & (1L << (i % 64))) == 0L))
+          || ((data.toSkip(i / 64) & (1L << (i % 64))) != 0L) || (
+          (data.toMore(i / 64) & (1L << (i % 64))) != 0L)
           || data.canReachOnMore(data.getState(i))
-          || ((data.ignoreCase() || data.ignoreCase(i)) && (!image.equals(image.toLowerCase(Locale.ENGLISH))
+          || ((data.ignoreCase() || data.ignoreCase(i)) && (
+          !image.equals(image.toLowerCase(Locale.ENGLISH))
               || !image.equals(image.toUpperCase(Locale.ENGLISH))))) {
         data.setImage(i, null);
         if ((charCnt += 6) > 80) {
@@ -719,7 +778,8 @@ class JavaLexerGenerator extends LexerGenerator {
       for (int j = 0; j < image.length(); j++) {
         if (image.charAt(j) <= 0xff) {
           toPrint += ("\\" + Integer.toOctalString(image.charAt(j)));
-        } else {
+        }
+        else {
           String hexVal = Integer.toHexString(image.charAt(j));
           if (hexVal.length() == 3) {
             hexVal = "0" + hexVal;
@@ -745,7 +805,6 @@ class JavaLexerGenerator extends LexerGenerator {
       }
 
       writer.print("null, ");
-      continue;
     }
     writer.flush();
     return buffer.toString();
@@ -753,13 +812,15 @@ class JavaLexerGenerator extends LexerGenerator {
 
   private void DumpStartWithStates(PrintWriter writer, NfaStateData data) {
     writer.println(
-        "private int " + "jjStartNfaWithStates" + data.getLexerStateSuffix() + "(int pos, int kind, int state)");
+        "private int " + "jjStartNfaWithStates" + data.getLexerStateSuffix()
+            + "(int pos, int kind, int state)");
     writer.println("{");
     writer.println("   jjmatchedKind = kind;");
     writer.println("   jjmatchedPos = pos;");
 
     if (data.global.options().getDebugTokenManager()) {
-      writer.println("   debugStream.println(\"   No more string literal token matches are possible.\");");
+      writer.println(
+          "   debugStream.println(\"   No more string literal token matches are possible.\");");
       writer.println("   debugStream.println(\"   Currently matched the first \" "
           + "+ (jjmatchedPos + 1) + \" characters as a \" + tokenImage[jjmatchedKind] + \" token.\");");
     }
@@ -781,9 +842,11 @@ class JavaLexerGenerator extends LexerGenerator {
   protected final void DumpHeadForCase(PrintWriter writer, int byteNum) {
     if (byteNum == 0) {
       writer.println("         long l = 1L << curChar;");
-    } else if (byteNum == 1) {
+    }
+    else if (byteNum == 1) {
       writer.println("         long l = 1L << (curChar & 077);");
-    } else {
+    }
+    else {
       writer.println("         int hiByte = (curChar >> 8);");
       writer.println("         int i1 = hiByte >> 6;");
       writer.println("         long l1 = 1L << (hiByte & 077);");
@@ -801,11 +864,13 @@ class JavaLexerGenerator extends LexerGenerator {
 
   private void DumpNonAsciiMoveMethod(NfaState state, LexerData data, PrintWriter writer) {
     for (int j = 0; j < state.loByteVec.size(); j += 2) {
-      writer.println("      case " + state.loByteVec.get(j).intValue() + ":");
-      if (!NfaState.AllBitsSet(data.getAllBitVectors(state.loByteVec.get(j + 1).intValue()))) {
+      writer.println("      case " + state.loByteVec.get(j) + ":");
+      if (!NfaState.AllBitsSet(data.getAllBitVectors(state.loByteVec.get(j + 1)))) {
         writer
-            .println("         return ((jjbitVec" + state.loByteVec.get(j + 1).intValue() + "[i2" + "] & l2) != 0L);");
-      } else {
+            .println("         return ((jjbitVec" + state.loByteVec.get(j + 1) + "[i2"
+                + "] & l2) != 0L);");
+      }
+      else {
         writer.println("            return true;");
       }
     }
@@ -814,10 +879,12 @@ class JavaLexerGenerator extends LexerGenerator {
 
     for (int j = state.nonAsciiMoveIndices.length; j > 0; j -= 2) {
       if (!NfaState.AllBitsSet(data.getAllBitVectors(state.nonAsciiMoveIndices[j - 2]))) {
-        writer.println("         if ((jjbitVec" + state.nonAsciiMoveIndices[j - 2] + "[i1] & l1) != 0L)");
+        writer.println(
+            "         if ((jjbitVec" + state.nonAsciiMoveIndices[j - 2] + "[i1] & l1) != 0L)");
       }
       if (!NfaState.AllBitsSet(data.getAllBitVectors(state.nonAsciiMoveIndices[j - 1]))) {
-        writer.println("            if ((jjbitVec" + state.nonAsciiMoveIndices[j - 1] + "[i2] & l2) == 0L)");
+        writer.println(
+            "            if ((jjbitVec" + state.nonAsciiMoveIndices[j - 1] + "[i2] & l2) == 0L)");
         writer.println("               return false;");
         writer.println("            else");
       }
@@ -841,18 +908,18 @@ class JavaLexerGenerator extends LexerGenerator {
       for (int j = 0; j < data.getStatesForState()[i].length; j++) {
         int[] stateSet = data.getStatesForState()[i][j];
         if (stateSet == null) {
-          builder.append("{ " + j + " },");
+          builder.append("{ ").append(j).append(" },");
           continue;
         }
         builder.append("{ ");
         for (int element : stateSet) {
-          builder.append(element + ",");
+          builder.append(element).append(",");
         }
         builder.append("},");
       }
       builder.append("},");
     }
-    return String.format("{%s}", builder.toString());
+    return String.format("{%s}", builder);
   }
 
   private String getKindForState(LexerData data) {
@@ -869,7 +936,8 @@ class JavaLexerGenerator extends LexerGenerator {
       moreThanOne = true;
       if (kind == null) {
         builder.append("{}");
-      } else {
+      }
+      else {
         builder.append("{ ");
         for (int element : kind) {
           builder.append(element);
@@ -878,7 +946,7 @@ class JavaLexerGenerator extends LexerGenerator {
         builder.append("}");
       }
     }
-    return String.format("{%s}", builder.toString());
+    return String.format("{%s}", builder);
   }
 
   @Override
@@ -890,19 +958,22 @@ class JavaLexerGenerator extends LexerGenerator {
 
     int i, maxKindsReqd = (data.getMaxStrKind() / 64) + 1;
     boolean condGenerated = false;
-    int ind = 0;
+    int ind;
 
     StringBuilder params = new StringBuilder();
     for (i = 0; i < (maxKindsReqd - 1); i++) {
-      params.append("long active" + i + ", ");
+      params.append("long active").append(i).append(", ");
     }
-    params.append("long active" + i + ")");
+    params.append("long active").append(i).append(")");
 
-    writer.print("private final int jjStopStringLiteralDfa" + data.getLexerStateSuffix() + "(int pos, " + params);
+    writer.print(
+        "private final int jjStopStringLiteralDfa" + data.getLexerStateSuffix() + "(int pos, "
+            + params);
     writer.println("{");
 
     if (data.global.options().getDebugTokenManager()) {
-      writer.println("      debugStream.println(\"   No more string literal token matches are possible.\");");
+      writer.println(
+          "      debugStream.println(\"   No more string literal token matches are possible.\");");
     }
 
     writer.println("   switch (pos)");
@@ -927,7 +998,8 @@ class JavaLexerGenerator extends LexerGenerator {
 
           if (condGenerated) {
             writer.print(" || ");
-          } else {
+          }
+          else {
             writer.print("         if (");
           }
 
@@ -955,21 +1027,25 @@ class JavaLexerGenerator extends LexerGenerator {
                   && (data.global.initMatch(data.getStateIndex()) != Integer.MAX_VALUE))) {
                 writer.println("            jjmatchedPos = 0;");
               }
-            } else if (i == jjmatchedPos) {
+            }
+            else if (i == jjmatchedPos) {
               if (data.isSubStringAtPos(i)) {
                 writer.println("            if (jjmatchedPos != " + i + ")");
                 writer.println("            {");
                 writer.println("               jjmatchedKind = " + kindStr + ";");
                 writer.println("               jjmatchedPos = " + i + ";");
                 writer.println("            }");
-              } else {
+              }
+              else {
                 writer.println("            jjmatchedKind = " + kindStr + ";");
                 writer.println("            jjmatchedPos = " + i + ";");
               }
-            } else {
+            }
+            else {
               if (jjmatchedPos > 0) {
                 writer.println("            if (jjmatchedPos < " + jjmatchedPos + ")");
-              } else {
+              }
+              else {
                 writer.println("            if (jjmatchedPos == 0)");
               }
               writer.println("            {");
@@ -985,8 +1061,10 @@ class JavaLexerGenerator extends LexerGenerator {
 
           if (stateSetString.equals("null;")) {
             writer.println("            return -1;");
-          } else {
-            writer.println("            return " + getCompositeStateSet(data, stateSetString, true) + ";");
+          }
+          else {
+            writer.println(
+                "            return " + getCompositeStateSet(data, stateSetString) + ";");
           }
 
           if (!kindStr.equals(String.valueOf(Integer.MAX_VALUE))) {
@@ -1007,17 +1085,20 @@ class JavaLexerGenerator extends LexerGenerator {
     params.setLength(0);
     params.append("(int pos, ");
     for (i = 0; i < (maxKindsReqd - 1); i++) {
-      params.append("long active" + i + ", ");
+      params.append("long active").append(i).append(", ");
     }
-    params.append("long active" + i + ")");
+    params.append("long active").append(i).append(")");
 
     writer.print("private final int jjStartNfa" + data.getLexerStateSuffix() + params);
     writer.println("{");
 
     if (data.isMixedState()) {
       if (data.generatedStates() != 0) {
-        writer.println("   return jjMoveNfa" + data.getLexerStateSuffix() + "(" + InitStateName(data) + ", pos + 1);");
-      } else {
+        writer.println(
+            "   return jjMoveNfa" + data.getLexerStateSuffix() + "(" + InitStateName(data)
+                + ", pos + 1);");
+      }
+      else {
         writer.println("   return pos + 1;");
       }
 
@@ -1045,7 +1126,8 @@ class JavaLexerGenerator extends LexerGenerator {
     boolean ifGenerated;
 
     if (data.getMaxLen() == 0) {
-      writer.println("private int " + "jjMoveStringLiteralDfa0" + data.getLexerStateSuffix() + "()");
+      writer.println(
+          "private int " + "jjMoveStringLiteralDfa0" + data.getLexerStateSuffix() + "()");
       DumpNullStrLiterals(writer, data);
       return;
     }
@@ -1057,9 +1139,11 @@ class JavaLexerGenerator extends LexerGenerator {
       writer.println("   jjmatchedPos = pos;");
 
       if (data.global.options().getDebugTokenManager()) {
-        writer.println("   debugStream.println(\"   No more string literal token matches are possible.\");");
-        writer.println("   debugStream.println(\"   Currently matched the first \" + (jjmatchedPos + 1) + "
-            + "\" characters as a \" + tokenImage[jjmatchedKind] + \" token.\");");
+        writer.println(
+            "   debugStream.println(\"   No more string literal token matches are possible.\");");
+        writer.println(
+            "   debugStream.println(\"   Currently matched the first \" + (jjmatchedPos + 1) + "
+                + "\" characters as a \" + tokenImage[jjmatchedKind] + \" token.\");");
       }
 
       writer.println("   return pos + 1;");
@@ -1081,10 +1165,11 @@ class JavaLexerGenerator extends LexerGenerator {
             if (i <= data.getMaxLenForActive(j)) {
               if (atLeastOne) {
                 params.append(", ");
-              } else {
+              }
+              else {
                 atLeastOne = true;
               }
-              params.append("long active" + j);
+              params.append("long active").append(j);
             }
           }
 
@@ -1092,17 +1177,19 @@ class JavaLexerGenerator extends LexerGenerator {
             if (atLeastOne) {
               params.append(", ");
             }
-            params.append("long active" + j);
+            params.append("long active").append(j);
           }
-        } else {
+        }
+        else {
           for (j = 0; j < (maxLongsReqd - 1); j++) {
             if (i <= (data.getMaxLenForActive(j) + 1)) {
               if (atLeastOne) {
                 params.append(", ");
-              } else {
+              }
+              else {
                 atLeastOne = true;
               }
-              params.append("long old" + j + ", " + "long active" + j);
+              params.append("long old").append(j).append(", ").append("long active").append(j);
             }
           }
 
@@ -1110,12 +1197,13 @@ class JavaLexerGenerator extends LexerGenerator {
             if (atLeastOne) {
               params.append(", ");
             }
-            params.append("long old" + j + ", " + "long active" + j);
+            params.append("long old").append(j).append(", ").append("long active").append(j);
           }
         }
       }
       params.append(")");
-      writer.print("private int " + "jjMoveStringLiteralDfa" + i + data.getLexerStateSuffix() + params);
+      writer.print(
+          "private int " + "jjMoveStringLiteralDfa" + i + data.getLexerStateSuffix() + params);
       writer.println("{");
 
       if (i != 0) {
@@ -1127,7 +1215,8 @@ class JavaLexerGenerator extends LexerGenerator {
             if (i <= (data.getMaxLenForActive(j) + 1)) {
               if (atLeastOne) {
                 writer.print(" | ");
-              } else {
+              }
+              else {
                 atLeastOne = true;
               }
               writer.print("(active" + j + " &= old" + j + ")");
@@ -1143,30 +1232,38 @@ class JavaLexerGenerator extends LexerGenerator {
 
           writer.println(") == 0L)");
           if (!data.isMixedState() && (data.generatedStates() != 0)) {
-            writer.print("      return jjStartNfa" + data.getLexerStateSuffix() + "(" + (i - 2) + ", ");
+            writer.print(
+                "      return jjStartNfa" + data.getLexerStateSuffix() + "(" + (i - 2) + ", ");
             for (j = 0; j < (maxLongsReqd - 1); j++) {
               if (i <= (data.getMaxLenForActive(j) + 1)) {
                 writer.print("old" + j + ", ");
-              } else {
+              }
+              else {
                 writer.print("0L, ");
               }
             }
             if (i <= (data.getMaxLenForActive(j) + 1)) {
               writer.println("old" + j + ");");
-            } else {
+            }
+            else {
               writer.println("0L);");
             }
-          } else if (data.generatedStates() != 0) {
-            writer.println("      return jjMoveNfa" + data.getLexerStateSuffix() + "(" + InitStateName(data) + ", "
-                + (i - 1) + ");");
-          } else {
+          }
+          else if (data.generatedStates() != 0) {
+            writer.println(
+                "      return jjMoveNfa" + data.getLexerStateSuffix() + "(" + InitStateName(data)
+                    + ", "
+                    + (i - 1) + ");");
+          }
+          else {
             writer.println("      return " + i + ";");
           }
         }
 
         if ((i != 0) && data.global.options().getDebugTokenManager()) {
           writer.println(
-              "   if (jjmatchedKind != 0 && jjmatchedKind != 0x" + Integer.toHexString(Integer.MAX_VALUE) + ")");
+              "   if (jjmatchedKind != 0 && jjmatchedKind != 0x" + Integer.toHexString(
+                  Integer.MAX_VALUE) + ")");
           writer.println("      debugStream.println(\"   Currently matched the first \" + "
               + "(jjmatchedPos + 1) + \" characters as a \" + tokenImage[jjmatchedKind] + \" token.\");");
           writer.println("   debugStream.println(\"   Possible string literal matches : { \"");
@@ -1186,34 +1283,40 @@ class JavaLexerGenerator extends LexerGenerator {
         writer.println("   catch(java.io.IOException e) {");
 
         if (!data.isMixedState() && (data.generatedStates() != 0)) {
-          writer.print("      jjStopStringLiteralDfa" + data.getLexerStateSuffix() + "(" + (i - 1) + ", ");
+          writer.print(
+              "      jjStopStringLiteralDfa" + data.getLexerStateSuffix() + "(" + (i - 1) + ", ");
           for (k = 0; k < (maxLongsReqd - 1); k++) {
             if (i <= data.getMaxLenForActive(k)) {
               writer.print("active" + k + ", ");
-            } else {
+            }
+            else {
               writer.print("0L, ");
             }
           }
 
           if (i <= data.getMaxLenForActive(k)) {
             writer.println("active" + k + ");");
-          } else {
+          }
+          else {
             writer.println("0L);");
           }
 
-
           if ((i != 0) && data.global.options().getDebugTokenManager()) {
             writer.println(
-                "      if (jjmatchedKind != 0 && jjmatchedKind != 0x" + Integer.toHexString(Integer.MAX_VALUE) + ")");
+                "      if (jjmatchedKind != 0 && jjmatchedKind != 0x" + Integer.toHexString(
+                    Integer.MAX_VALUE) + ")");
             writer.println("         debugStream.println(\"   Currently matched the first \" + "
                 + "(jjmatchedPos + 1) + \" characters as a \" + tokenImage[jjmatchedKind] + \" token.\");");
           }
 
           writer.println("      return " + i + ";");
-        } else if (data.generatedStates() != 0) {
+        }
+        else if (data.generatedStates() != 0) {
           writer.println(
-              "   return jjMoveNfa" + data.getLexerStateSuffix() + "(" + InitStateName(data) + ", " + (i - 1) + ");");
-        } else {
+              "   return jjMoveNfa" + data.getLexerStateSuffix() + "(" + InitStateName(data) + ", "
+                  + (i - 1) + ");");
+        }
+        else {
           writer.println("      return " + i + ";");
         }
 
@@ -1222,7 +1325,8 @@ class JavaLexerGenerator extends LexerGenerator {
 
       if ((i != 0) && data.global.options().getDebugTokenManager()) {
         writer.println("   debugStream.println("
-            + (data.global.maxLexStates() > 1 ? "\"<\" + lexStateNames[curLexState] + \">\" + " : "")
+            + (data.global.maxLexStates() > 1 ? "\"<\" + lexStateNames[curLexState] + \">\" + "
+            : "")
             + "\"Current character : \" + TokenException.addEscapes(String.valueOf(curChar)) + \" (\" + (int)curChar + \") "
             + "at line \" + input_stream.getEndLine() + \" column \" + input_stream.getEndColumn());");
       }
@@ -1237,7 +1341,7 @@ class JavaLexerGenerator extends LexerGenerator {
         ifGenerated = false;
         char c = key.charAt(0);
 
-        if ((i == 0) && (c < 128) && (info.finalKindCnt != 0)
+        if ((i == 0) && (c < 128) && info.hasFinalKindCnt()
             && ((data.generatedStates() == 0) || !CanStartNfaUsingAscii(data, c))) {
           for (j = 0; j < maxLongsReqd; j++) {
             if (info.finalKinds[j] != 0L) {
@@ -1247,17 +1351,21 @@ class JavaLexerGenerator extends LexerGenerator {
 
           int kind;
           for (k = 0; k < 64; k++) {
-            if (((info.finalKinds[j] & (1L << k)) != 0L) && !data.isSubString(kind = ((j * 64) + k))) {
-              if (((data.getIntermediateKinds() != null) && (data.getIntermediateKinds()[((j * 64) + k)] != null)
+            if (((info.finalKinds[j] & (1L << k)) != 0L) && !data.isSubString(
+                kind = ((j * 64) + k))) {
+              if (((data.getIntermediateKinds() != null) && (
+                  data.getIntermediateKinds()[((j * 64) + k)] != null)
                   && (data.getIntermediateKinds()[((j * 64) + k)][i] < ((j * 64) + k))
                   && (data.getIntermediateMatchedPos() != null)
                   && (data.getIntermediateMatchedPos()[((j * 64) + k)][i] == i))
                   || ((data.global.canMatchAnyChar(data.getStateIndex()) >= 0)
-                      && (data.global.canMatchAnyChar(data.getStateIndex()) < ((j * 64) + k)))) {
+                  && (data.global.canMatchAnyChar(data.getStateIndex()) < ((j * 64) + k)))) {
                 break;
-              } else if (((data.global.toSkip(kind / 64) & (1L << (kind % 64))) != 0L)
+              }
+              else if (((data.global.toSkip(kind / 64) & (1L << (kind % 64))) != 0L)
                   && ((data.global.toSpecial(kind / 64) & (1L << (kind % 64))) == 0L)
-                  && (data.global.actions(kind) == null) && (data.global.newLexState(kind) == null)) {
+                  && (data.global.actions(kind) == null) && (data.global.newLexState(kind)
+                  == null)) {
                 continue CaseLoop;
               }
             }
@@ -1280,7 +1388,7 @@ class JavaLexerGenerator extends LexerGenerator {
         long matchedKind;
         String prefix = (i == 0) ? "         " : "            ";
 
-        if (info.finalKindCnt != 0) {
+        if (info.hasFinalKindCnt()) {
           for (j = 0; j < maxLongsReqd; j++) {
             if ((matchedKind = info.finalKinds[j]) == 0L) {
               continue;
@@ -1293,7 +1401,8 @@ class JavaLexerGenerator extends LexerGenerator {
 
               if (ifGenerated) {
                 writer.print("         else if ");
-              } else if (i != 0) {
+              }
+              else if (i != 0) {
                 writer.print("         if ");
               }
 
@@ -1304,25 +1413,32 @@ class JavaLexerGenerator extends LexerGenerator {
                 writer.println("((active" + j + " & 0x" + Long.toHexString(1L << k) + "L) != 0L)");
               }
 
-              if ((data.getIntermediateKinds() != null) && (data.getIntermediateKinds()[((j * 64) + k)] != null)
+              if ((data.getIntermediateKinds() != null) && (
+                  data.getIntermediateKinds()[((j * 64) + k)] != null)
                   && (data.getIntermediateKinds()[((j * 64) + k)][i] < ((j * 64) + k))
                   && (data.getIntermediateMatchedPos() != null)
                   && (data.getIntermediateMatchedPos()[((j * 64) + k)][i] == i)) {
                 JavaCCErrors.warning(" \"" + Encoding.escape(data.global.getImage((j * 64) + k))
                     + "\" cannot be matched as a string literal token " + "at line "
-                    + GetLine(data.global, (j * 64) + k) + ", column " + GetColumn(data.global, (j * 64) + k)
-                    + ". It will be matched as " + GetLabel(data.global, data.getIntermediateKinds()[((j * 64) + k)][i])
+                    + GetLine(data.global, (j * 64) + k) + ", column " + GetColumn(data.global,
+                    (j * 64) + k)
+                    + ". It will be matched as " + GetLabel(data.global,
+                    data.getIntermediateKinds()[((j * 64) + k)][i])
                     + ".");
                 kindToPrint = data.getIntermediateKinds()[((j * 64) + k)][i];
-              } else if ((i == 0) && (data.global.canMatchAnyChar(data.getStateIndex()) >= 0)
+              }
+              else if ((i == 0) && (data.global.canMatchAnyChar(data.getStateIndex()) >= 0)
                   && (data.global.canMatchAnyChar(data.getStateIndex()) < ((j * 64) + k))) {
                 JavaCCErrors.warning(" \"" + Encoding.escape(data.global.getImage((j * 64) + k))
                     + "\" cannot be matched as a string literal token " + "at line "
-                    + GetLine(data.global, (j * 64) + k) + ", column " + GetColumn(data.global, (j * 64) + k)
+                    + GetLine(data.global, (j * 64) + k) + ", column " + GetColumn(data.global,
+                    (j * 64) + k)
                     + ". It will be matched as "
-                    + GetLabel(data.global, data.global.canMatchAnyChar(data.getStateIndex())) + ".");
+                    + GetLabel(data.global, data.global.canMatchAnyChar(data.getStateIndex()))
+                    + ".");
                 kindToPrint = data.global.canMatchAnyChar(data.getStateIndex());
-              } else {
+              }
+              else {
                 kindToPrint = (j * 64) + k;
               }
 
@@ -1330,25 +1446,32 @@ class JavaLexerGenerator extends LexerGenerator {
                 int stateSetName = GetStateSetForKind(data, i, (j * 64) + k);
 
                 if (stateSetName != -1) {
-                  writer.println(prefix + "return jjStartNfaWithStates" + data.getLexerStateSuffix() + "(" + i + ", "
-                      + kindToPrint + ", " + stateSetName + ");");
-                } else {
-                  writer.println(prefix + "return jjStopAtPos" + "(" + i + ", " + kindToPrint + ");");
+                  writer.println(
+                      prefix + "return jjStartNfaWithStates" + data.getLexerStateSuffix() + "(" + i
+                          + ", "
+                          + kindToPrint + ", " + stateSetName + ");");
                 }
-              } else if (((data.global.initMatch(data.getStateIndex()) != 0)
-                  && (data.global.initMatch(data.getStateIndex()) != Integer.MAX_VALUE)) || (i != 0)) {
+                else {
+                  writer.println(
+                      prefix + "return jjStopAtPos" + "(" + i + ", " + kindToPrint + ");");
+                }
+              }
+              else if (((data.global.initMatch(data.getStateIndex()) != 0)
+                  && (data.global.initMatch(data.getStateIndex()) != Integer.MAX_VALUE)) || (i
+                  != 0)) {
                 writer.println("         {");
                 writer.println(prefix + "jjmatchedKind = " + kindToPrint + ";");
                 writer.println(prefix + "jjmatchedPos = " + i + ";");
                 writer.println("         }");
-              } else {
+              }
+              else {
                 writer.println(prefix + "jjmatchedKind = " + kindToPrint + ";");
               }
             }
           }
         }
 
-        if (info.validKindCnt != 0) {
+        if (info.hasValidKindCnt()) {
           atLeastOne = false;
 
           if (i == 0) {
@@ -1359,7 +1482,8 @@ class JavaLexerGenerator extends LexerGenerator {
               if ((i + 1) <= data.getMaxLenForActive(j)) {
                 if (atLeastOne) {
                   writer.print(", ");
-                } else {
+                }
+                else {
                   atLeastOne = true;
                 }
 
@@ -1375,7 +1499,8 @@ class JavaLexerGenerator extends LexerGenerator {
               writer.print("0x" + Long.toHexString(info.validKinds[j]) + "L");
             }
             writer.println(");");
-          } else {
+          }
+          else {
             writer.print("         return ");
 
             writer.print("jjMoveStringLiteralDfa" + (i + 1) + data.getLexerStateSuffix() + "(");
@@ -1384,13 +1509,15 @@ class JavaLexerGenerator extends LexerGenerator {
               if ((i + 1) <= (data.getMaxLenForActive(j) + 1)) {
                 if (atLeastOne) {
                   writer.print(", ");
-                } else {
+                }
+                else {
                   atLeastOne = true;
                 }
 
                 if (info.validKinds[j] != 0L) {
                   writer.print("active" + j + ", 0x" + Long.toHexString(info.validKinds[j]) + "L");
-                } else {
+                }
+                else {
                   writer.print("active" + j + ", 0L");
                 }
               }
@@ -1402,27 +1529,32 @@ class JavaLexerGenerator extends LexerGenerator {
               }
               if (info.validKinds[j] != 0L) {
                 writer.print("active" + j + ", 0x" + Long.toHexString(info.validKinds[j]) + "L");
-              } else {
+              }
+              else {
                 writer.print("active" + j + ", 0L");
               }
             }
 
             writer.println(");");
           }
-        } else // A very special case.
-        if ((i == 0) && data.isMixedState()) {
-
-          if (data.generatedStates() != 0) {
-            writer.println(
-                "         return jjMoveNfa" + data.getLexerStateSuffix() + "(" + InitStateName(data) + ", 0);");
-          } else {
-            writer.println("         return 1;");
-          }
-        } else if (i != 0) // No more str literals to look for
-        {
-          writer.println("         break;");
-          startNfaNeeded = true;
         }
+        else // A very special case.
+          if ((i == 0) && data.isMixedState()) {
+
+            if (data.generatedStates() != 0) {
+              writer.println(
+                  "         return jjMoveNfa" + data.getLexerStateSuffix() + "(" + InitStateName(
+                      data) + ", 0);");
+            }
+            else {
+              writer.println("         return 1;");
+            }
+          }
+          else if (i != 0) // No more str literals to look for
+          {
+            writer.println("         break;");
+            startNfaNeeded = true;
+          }
       }
 
       writer.println("      default :");
@@ -1437,15 +1569,18 @@ class JavaLexerGenerator extends LexerGenerator {
            * This means no string literal is possible. Just move nfa with this guy and return.
            */
           writer
-              .println("         return jjMoveNfa" + data.getLexerStateSuffix() + "(" + InitStateName(data) + ", 0);");
-        } else {
+              .println(
+                  "         return jjMoveNfa" + data.getLexerStateSuffix() + "(" + InitStateName(
+                      data) + ", 0);");
+        }
+        else {
           writer.println("         break;");
           startNfaNeeded = true;
         }
-      } else {
+      }
+      else {
         writer.println("         return " + (i + 1) + ";");
       }
-
 
       writer.println("   }");
 
@@ -1461,19 +1596,24 @@ class JavaLexerGenerator extends LexerGenerator {
           for (k = 0; k < (maxLongsReqd - 1); k++) {
             if (i <= data.getMaxLenForActive(k)) {
               writer.print("active" + k + ", ");
-            } else {
+            }
+            else {
               writer.print("0L, ");
             }
           }
           if (i <= data.getMaxLenForActive(k)) {
             writer.println("active" + k + ");");
-          } else {
+          }
+          else {
             writer.println("0L);");
           }
-        } else if (data.generatedStates() != 0) {
+        }
+        else if (data.generatedStates() != 0) {
           writer.println(
-              "   return jjMoveNfa" + data.getLexerStateSuffix() + "(" + InitStateName(data) + ", " + i + ");");
-        } else {
+              "   return jjMoveNfa" + data.getLexerStateSuffix() + "(" + InitStateName(data) + ", "
+                  + i + ");");
+        }
+        else {
           writer.println("   return " + (i + 1) + ";");
         }
       }
@@ -1488,7 +1628,8 @@ class JavaLexerGenerator extends LexerGenerator {
 
   @Override
   protected final void dumpMoveNfa(PrintWriter writer, NfaStateData data) {
-    writer.println("private int " + "jjMoveNfa" + data.getLexerStateSuffix() + "(int startState, int curPos)");
+    writer.println(
+        "private int " + "jjMoveNfa" + data.getLexerStateSuffix() + "(int startState, int curPos)");
     writer.println("{");
     if (data.generatedStates() == 0) {
       writer.println("   return curPos;");
@@ -1560,17 +1701,20 @@ class JavaLexerGenerator extends LexerGenerator {
 
     if (data.global.options().getDebugTokenManager()) {
       writer.println(
-          "      if (jjmatchedKind != 0 && jjmatchedKind != 0x" + Integer.toHexString(Integer.MAX_VALUE) + ")");
+          "      if (jjmatchedKind != 0 && jjmatchedKind != 0x" + Integer.toHexString(
+              Integer.MAX_VALUE) + ")");
       writer.println("         debugStream.println("
           + "\"   Currently matched the first \" + (jjmatchedPos + 1) + \" characters as"
           + " a \" + tokenImage[jjmatchedKind] + \" token.\");");
     }
 
     writer.println(
-        "      if ((i = jjnewStateCnt) == (startsAt = " + data.generatedStates() + " - (jjnewStateCnt = startsAt)))");
+        "      if ((i = jjnewStateCnt) == (startsAt = " + data.generatedStates()
+            + " - (jjnewStateCnt = startsAt)))");
     if (data.isMixedState()) {
       writer.println("         break;");
-    } else {
+    }
+    else {
       writer.println("         return curPos;");
     }
 
@@ -1582,7 +1726,8 @@ class JavaLexerGenerator extends LexerGenerator {
     writer.println("      try { curChar = input_stream.readChar(); }");
     if (data.isMixedState()) {
       writer.println("      catch(java.io.IOException e) { break; }");
-    } else {
+    }
+    else {
       writer.println("      catch(java.io.IOException e) { return curPos; }");
     }
 
