@@ -4,27 +4,26 @@
 package org.hivevm.cc.generator.java;
 
 import java.io.PrintWriter;
-import java.util.Iterator;
 import java.util.List;
+import java.util.Objects;
 import java.util.stream.Collectors;
-
 import org.hivevm.cc.Language;
 import org.hivevm.cc.generator.ParserData;
 import org.hivevm.cc.generator.ParserGenerator;
 import org.hivevm.cc.generator.TemplateProvider;
-import org.hivevm.cc.parser.Action;
-import org.hivevm.cc.parser.BNFProduction;
-import org.hivevm.cc.parser.Choice;
-import org.hivevm.cc.parser.Expansion;
-import org.hivevm.cc.parser.Lookahead;
-import org.hivevm.cc.parser.NonTerminal;
-import org.hivevm.cc.parser.NormalProduction;
-import org.hivevm.cc.parser.OneOrMore;
-import org.hivevm.cc.parser.RegularExpression;
-import org.hivevm.cc.parser.Sequence;
+import org.hivevm.cc.model.Action;
+import org.hivevm.cc.model.BNFProduction;
+import org.hivevm.cc.model.Choice;
+import org.hivevm.cc.model.Expansion;
+import org.hivevm.cc.model.Lookahead;
+import org.hivevm.cc.model.NonTerminal;
+import org.hivevm.cc.model.NormalProduction;
+import org.hivevm.cc.model.OneOrMore;
+import org.hivevm.cc.model.RExpression;
+import org.hivevm.cc.model.Sequence;
+import org.hivevm.cc.model.ZeroOrMore;
+import org.hivevm.cc.model.ZeroOrOne;
 import org.hivevm.cc.parser.Token;
-import org.hivevm.cc.parser.ZeroOrMore;
-import org.hivevm.cc.parser.ZeroOrOne;
 import org.hivevm.cc.semantic.Semanticize;
 import org.hivevm.cc.utils.Encoding;
 import org.hivevm.cc.utils.TemplateOptions;
@@ -45,13 +44,17 @@ class JavaParserGenerator extends ParserGenerator {
 
     options.add(ParserGenerator.JJ2_OFFSET, data.jj2Index()).set("offset", i -> (i + 1));
     options.add(ParserGenerator.TOKEN_MASKS, ((data.getTokenCount() - 1) / 32) + 1).set("mask",
-        i -> data.maskVals().stream().map(v -> "0x" + Integer.toHexString(v[i])).collect(Collectors.joining(", ")));
-    options.add(ParserGenerator.TOKEN_MASKS + "_LA1", ((data.getTokenCount() - 1) / 32) + 1).set("la1",
-        i -> (i == 0) ? "" : (32 * i) + " + ");
+        i -> data.maskVals().stream().map(v -> "0x" + Integer.toHexString(v[i]))
+            .collect(Collectors.joining(", ")));
+    options.add(ParserGenerator.TOKEN_MASKS + "_LA1", ((data.getTokenCount() - 1) / 32) + 1)
+        .set("la1",
+            i -> (i == 0) ? "" : (32 * i) + " + ");
 
     options.add("NORMALPRODUCTIONS", data.getProductions()).set("phase",
-        (n, p) -> generatePhase1((BNFProduction) n, generatePhase1Expansion(data, n.getExpansion()), p, data));
-    options.add("LOOKAHEADS", data.getLoakaheads()).set("phase", (e, p) -> generatePhase2(e.getLaExpansion(), p, data));
+        (n, p) -> generatePhase1((BNFProduction) n, generatePhase1Expansion(data, n.getExpansion()),
+            p, data));
+    options.add("LOOKAHEADS", data.getLoakaheads())
+        .set("phase", (e, p) -> generatePhase2(e.getLaExpansion(), p, data));
     options.add("EXPANSIONS", data.getExpansions()).set("phase",
         (e, p) -> generatePhase3Routine(data, e, data.getCount(e), p));
 
@@ -72,7 +75,7 @@ class JavaParserGenerator extends ParserGenerator {
    * not be followed by an indentation.
    */
   private void generatePhase1(BNFProduction p, String code, PrintWriter writer, ParserData data) {
-    Token t = p.getReturnTypeTokens().get(0);
+    Token t = p.getReturnTypeTokens().getFirst();
 
     genHeaderMethod(p, t, writer);
 
@@ -89,15 +92,16 @@ class JavaParserGenerator extends ParserGenerator {
     int indentamt = 4;
     if (data.getDebugParser()) {
       writer.println();
-      writer.println("    trace_call(\"" + Encoding.escapeUnicode(p.getLhs(), Language.JAVA) + "\");");
+      writer.println(
+          "    trace_call(\"" + Encoding.escapeUnicode(p.getLhs(), Language.JAVA) + "\");");
       writer.println("    try {");
       indentamt = 6;
     }
 
-    if (p.getDeclarationTokens().size() != 0) {
-      genTokenSetup((p.getDeclarationTokens().get(0)));
-      for (Iterator<Token> it = p.getDeclarationTokens().iterator(); it.hasNext();) {
-        t = it.next();
+    if (!p.getDeclarationTokens().isEmpty()) {
+      genTokenSetup((p.getDeclarationTokens().getFirst()));
+      for (Token token : p.getDeclarationTokens()) {
+        t = token;
         writer.print(getStringToPrint(t));
       }
       writer.print(getTrailingComments(t));
@@ -112,33 +116,40 @@ class JavaParserGenerator extends ParserGenerator {
       if ((ch == '\n') && (prevChar == '\r')) {
         // do nothing - we've already printed a new line for the '\r'
         // during the previous iteration.
-      } else if ((ch == '\n') || (ch == '\r')) {
+      }
+      else if ((ch == '\n') || (ch == '\r')) {
         if (indentOn) {
           writer.println();
           for (int i0 = 0; i0 < indentamt; i0++) {
             writer.print(" ");
           }
-        } else {
+        }
+        else {
           writer.println();
         }
-      } else if (ch == '\u0001') {
+      }
+      else if (ch == '\u0001') {
         indentamt += 2;
-      } else if (ch == '\u0002') {
+      }
+      else if (ch == '\u0002') {
         indentamt -= 2;
-      } else if (ch == '\u0003') {
+      }
+      else if (ch == '\u0003') {
         indentOn = false;
-      } else if (ch == '\u0004') {
+      }
+      else if (ch == '\u0004') {
         indentOn = true;
-      } else {
+      }
+      else {
         writer.print(ch);
       }
     }
     writer.println();
 
-    if (p.getDeclarationEndTokens().size() != 0) {
-      genTokenSetup((p.getDeclarationEndTokens().get(0)));
-      for (Iterator<Token> it = p.getDeclarationEndTokens().iterator(); it.hasNext();) {
-        t = it.next();
+    if (!p.getDeclarationEndTokens().isEmpty()) {
+      genTokenSetup((p.getDeclarationEndTokens().getFirst()));
+      for (Token token : p.getDeclarationEndTokens()) {
+        t = token;
         writer.print(getStringToPrint(t));
       }
       writer.println();
@@ -146,7 +157,8 @@ class JavaParserGenerator extends ParserGenerator {
 
     if (data.getDebugParser()) {
       writer.println("    } finally {");
-      writer.println("      trace_return(\"" + Encoding.escapeUnicode(p.getLhs(), Language.JAVA) + "\");");
+      writer.println(
+          "      trace_return(\"" + Encoding.escapeUnicode(p.getLhs(), Language.JAVA) + "\");");
       writer.println("    }");
     }
     if (data.getDepthLimit() > 0) {
@@ -161,69 +173,69 @@ class JavaParserGenerator extends ParserGenerator {
   private String generatePhase1Expansion(ParserData data, Expansion e) {
     String retval = "";
     Token t = null;
-    if (e instanceof RegularExpression) {
-      RegularExpression e_nrw = (RegularExpression) e;
+    if (e instanceof RExpression re) {
       retval += "\n";
-      if (e_nrw.getLhsTokens().size() != 0) {
-        genTokenSetup((e_nrw.getLhsTokens().get(0)));
-        for (Iterator<Token> it = e_nrw.getLhsTokens().iterator(); it.hasNext();) {
-          t = it.next();
+      if (!re.getLhsTokens().isEmpty()) {
+        genTokenSetup(re.getLhsTokens().getFirst());
+        for (Token token : re.getLhsTokens()) {
+          t = token;
           retval += getStringToPrint(t);
         }
         retval += getTrailingComments(t);
         retval += " = ";
       }
-      String tail = e_nrw.getRhsToken() == null ? ");" : ")." + e_nrw.getRhsToken().image + ";";
-      if (e_nrw.getLabel().equals("")) {
-        Object label = data.getNameOfToken(e_nrw.getOrdinal());
-        if (label != null) {
-          retval += "jj_consume_token(" + (String) label + tail;
-        } else {
-          retval += "jj_consume_token(" + e_nrw.getOrdinal() + tail;
-        }
-      } else {
-        retval += "jj_consume_token(" + e_nrw.getLabel() + tail;
+      String tail = re.getRhsToken() == null ? ");" : ")." + re.getRhsToken().image + ";";
+      if (re.getLabel().isEmpty()) {
+        String label = data.getNameOfToken(re.getOrdinal());
+        retval += "jj_consume_token(" + Objects.requireNonNullElseGet(label, () -> re.getOrdinal())
+            + tail;
+      }
+      else {
+        retval += "jj_consume_token(" + re.getLabel() + tail;
       }
 
-    } else if (e instanceof NonTerminal) {
-      NonTerminal e_nrw = (NonTerminal) e;
+    }
+    else if (e instanceof NonTerminal e_nrw) {
       retval += "\n";
-      if (e_nrw.getLhsTokens().size() != 0) {
-        genTokenSetup((e_nrw.getLhsTokens().get(0)));
-        for (Iterator<Token> it = e_nrw.getLhsTokens().iterator(); it.hasNext();) {
-          t = it.next();
+      if (!e_nrw.getLhsTokens().isEmpty()) {
+        genTokenSetup((e_nrw.getLhsTokens().getFirst()));
+        for (Token token : e_nrw.getLhsTokens()) {
+          t = token;
           retval += getStringToPrint(t);
         }
         retval += getTrailingComments(t);
         retval += " = ";
       }
       retval += e_nrw.getName() + "(";
-      if (e_nrw.getArgumentTokens().size() != 0) {
-        genTokenSetup((e_nrw.getArgumentTokens().get(0)));
-        for (Iterator<Token> it = e_nrw.getArgumentTokens().iterator(); it.hasNext();) {
-          t = it.next();
+      if (!e_nrw.getArgumentTokens().isEmpty()) {
+        genTokenSetup((e_nrw.getArgumentTokens().getFirst()));
+        for (Token token : e_nrw.getArgumentTokens()) {
+          t = token;
           retval += getStringToPrint(t);
         }
         retval += getTrailingComments(t);
       }
       retval += ");";
-    } else if (e instanceof Action) {
-      Action e_nrw = (Action) e;
+    }
+    else if (e instanceof Action e_nrw) {
       retval += "\u0003\n";
       if (!e_nrw.getActionTokens().isEmpty()) {
-        genTokenSetup((e_nrw.getActionTokens().get(0)));
-        for (Iterator<Token> it = e_nrw.getActionTokens().iterator(); it.hasNext();) {
-          t = it.next();
+        genTokenSetup((e_nrw.getActionTokens().getFirst()));
+        for (Token token : e_nrw.getActionTokens()) {
+          t = token;
           retval += getStringToPrint(t);
         }
         retval += getTrailingComments(t);
       }
       retval += "\u0004";
-    } else if (e instanceof Choice) {
-      Choice e_nrw = (Choice) e;
+    }
+    else if (e instanceof Choice e_nrw) {
       Lookahead[] conds = data.getLoakaheads(e);
       String[] actions = new String[e_nrw.getChoices().size() + 1];
-      actions[e_nrw.getChoices().size()] = "\n" + "jj_consume_token(-1);\nthrow new ParseException();";
+      actions[e_nrw.getChoices().size()] = """
+          
+          jj_consume_token(-1);
+          throw new ParseException();""";
 
       // In previous line, the "throw" never throws an exception since the
       // evaluation of jj_consume_token(-1) causes ParseException to be
@@ -234,8 +246,8 @@ class JavaParserGenerator extends ParserGenerator {
         actions[i] = generatePhase1Expansion(data, nestedSeq);
       }
       retval = genLookaheadChecker(data, conds, actions);
-    } else if (e instanceof Sequence) {
-      Sequence e_nrw = (Sequence) e;
+    }
+    else if (e instanceof Sequence e_nrw) {
       // We skip the first element in the following iteration since it is the
       // Lookahead object.
       for (int i = 1; i < e_nrw.getUnits().size(); i++) {
@@ -247,8 +259,8 @@ class JavaParserGenerator extends ParserGenerator {
           retval += "\n}";
         }
       }
-    } else if (e instanceof OneOrMore) {
-      OneOrMore e_nrw = (OneOrMore) e;
+    }
+    else if (e instanceof OneOrMore e_nrw) {
       Expansion nested_e = e_nrw.getExpansion();
       retval += "\n";
       int labelIndex = nextLabelIndex();
@@ -256,26 +268,26 @@ class JavaParserGenerator extends ParserGenerator {
       retval += "while (true) {\u0001";
       retval += generatePhase1Expansion(data, nested_e);
       Lookahead[] conds = data.getLoakaheads(e);
-      String[] actions = { "\n;", "\nbreak label_" + labelIndex + ";" };
+      String[] actions = {"\n;", "\nbreak label_" + labelIndex + ";"};
       retval += genLookaheadChecker(data, conds, actions);
       retval += "\u0002\n" + "}";
-    } else if (e instanceof ZeroOrMore) {
-      ZeroOrMore e_nrw = (ZeroOrMore) e;
+    }
+    else if (e instanceof ZeroOrMore e_nrw) {
       Expansion nested_e = e_nrw.getExpansion();
       retval += "\n";
       int labelIndex = nextLabelIndex();
       retval += "label_" + labelIndex + ":\n";
       retval += "while (true) {\u0001";
       Lookahead[] conds = data.getLoakaheads(e);
-      String[] actions = { "\n;", "\nbreak label_" + labelIndex + ";" };
+      String[] actions = {"\n;", "\nbreak label_" + labelIndex + ";"};
       retval += genLookaheadChecker(data, conds, actions);
       retval += generatePhase1Expansion(data, nested_e);
       retval += "\u0002\n" + "}";
-    } else if (e instanceof ZeroOrOne) {
-      ZeroOrOne e_nrw = (ZeroOrOne) e;
+    }
+    else if (e instanceof ZeroOrOne e_nrw) {
       Expansion nested_e = e_nrw.getExpansion();
       Lookahead[] conds = data.getLoakaheads(e);
-      String[] actions = { generatePhase1Expansion(data, nested_e), "\n;" };
+      String[] actions = {generatePhase1Expansion(data, nested_e), "\n;"};
       retval += genLookaheadChecker(data, conds, actions);
     }
     return retval;
@@ -287,9 +299,9 @@ class JavaParserGenerator extends ParserGenerator {
    * code, and "conds" translate to conditions - so lets say "f(conds[i])" is true if the lookahead
    * required by "conds[i]" is indeed the case. This method returns a string corresponding to the
    * Java code for:
-   *
+   * <p>
    * if (f(conds[0]) actions[0] else if (f(conds[1]) actions[1] . . . else actions[action.length-1]
-   *
+   * <p>
    * A particular action entry ("actions[i]") can be null, in which case, a noop is generated for
    * that action.
    */
@@ -304,7 +316,7 @@ class JavaParserGenerator extends ParserGenerator {
 
     // Iterate over all the conditions.
     int index = 0;
-    boolean jj2LA = false;
+    boolean jj2LA;
     while (index < conds.length) {
 
       la = conds[index];
@@ -318,12 +330,13 @@ class JavaParserGenerator extends ParserGenerator {
         // string - in which case the lookahead trivially passes.
         // . If the lookahead expansion has a JAVACODE production that it directly
         // expands to - in which case the lookahead trivially passes.
-        if (la.getActionTokens().size() == 0) {
+        if (la.getActionTokens().isEmpty()) {
           // In addition, if there is no semantic lookahead, then the
           // lookahead trivially succeeds. So break the main loop and
           // treat this case as the default last action.
           break;
-        } else {
+        }
+        else {
           // This case is when there is only semantic lookahead
           // (without any preceding syntactic lookahead). In this
           // case, an "if" statement is generated.
@@ -343,9 +356,9 @@ class JavaParserGenerator extends ParserGenerator {
               retval += "\n" + "if (";
               indentAmt++;
           }
-          genTokenSetup((la.getActionTokens().get(0)));
-          for (Iterator<Token> it = la.getActionTokens().iterator(); it.hasNext();) {
-            t = it.next();
+          genTokenSetup((la.getActionTokens().getFirst()));
+          for (Token token : la.getActionTokens()) {
+            t = token;
             retval += getStringToPrint(t);
           }
           retval += getTrailingComments(t);
@@ -353,7 +366,8 @@ class JavaParserGenerator extends ParserGenerator {
           state = LookaheadState.OPENIF;
         }
 
-      } else if ((la.getAmount() == 1) && (la.getActionTokens().size() == 0)) {
+      }
+      else if ((la.getAmount() == 1) && (la.getActionTokens().isEmpty())) {
         // Special optimal processing when the lookahead is exactly 1, and there
         // is no semantic lookahead.
         boolean[] firstSet = new boolean[data.getTokenCount()];
@@ -380,7 +394,8 @@ class JavaParserGenerator extends ParserGenerator {
               if (data.getCacheTokens()) {
                 retval += "jj_nt.kind";
                 retval += ") {\u0001";
-              } else {
+              }
+              else {
                 retval += "(jj_ntk==-1)?jj_ntk_f():jj_ntk) {\u0001";
               }
               for (int i = 0; i < data.getTokenCount(); i++) {
@@ -397,7 +412,8 @@ class JavaParserGenerator extends ParserGenerator {
               String s = data.getNameOfToken(i);
               if (s == null) {
                 retval += i;
-              } else {
+              }
+              else {
                 retval += s;
               }
               retval += ":\u0001";
@@ -410,7 +426,8 @@ class JavaParserGenerator extends ParserGenerator {
 
         }
 
-      } else {
+      }
+      else {
         // This is the case when lookahead is determined through calls to
         // jj2 methods. The other case is when lookahead is 1, but semantic
         // attributes need to be evaluated. Hence this crazy control structure.
@@ -439,14 +456,14 @@ class JavaParserGenerator extends ParserGenerator {
         }
 
         String amount = Integer.toString(la.getAmount());
-        retval += "jj_2" + la.getLaExpansion().internal_name + "(" + amount + ")";
-        if (la.getActionTokens().size() != 0) {
+        retval += "jj_2" + la.getLaExpansion().internalName() + "(" + amount + ")";
+        if (!la.getActionTokens().isEmpty()) {
           // In addition, there is also a semantic lookahead. So concatenate
           // the semantic check with the syntactic one.
           retval += " && (";
-          genTokenSetup((la.getActionTokens().get(0)));
-          for (Iterator<Token> it = la.getActionTokens().iterator(); it.hasNext();) {
-            t = it.next();
+          genTokenSetup((la.getActionTokens().getFirst()));
+          for (Token token : la.getActionTokens()) {
+            t = token;
             retval += getStringToPrint(t);
           }
           retval += getTrailingComments(t);
@@ -483,7 +500,7 @@ class JavaParserGenerator extends ParserGenerator {
     return retval;
   }
 
-  private final void genHeaderMethod(BNFProduction p, Token t, PrintWriter writer) {
+  private void genHeaderMethod(BNFProduction p, Token t, PrintWriter writer) {
     genTokenSetup(t);
     writer.print(getLeadingComments(t));
     writer.print("  public final ");
@@ -494,10 +511,10 @@ class JavaParserGenerator extends ParserGenerator {
     }
     writer.print(getTrailingComments(t));
     writer.print(" " + p.getLhs() + "(");
-    if (p.getParameterListTokens().size() != 0) {
-      genTokenSetup((p.getParameterListTokens().get(0)));
-      for (Iterator<Token> it = p.getParameterListTokens().iterator(); it.hasNext();) {
-        t = it.next();
+    if (!p.getParameterListTokens().isEmpty()) {
+      genTokenSetup((p.getParameterListTokens().getFirst()));
+      for (Token token : p.getParameterListTokens()) {
+        t = token;
         writer.print(getStringToPrint(t));
       }
       writer.print(getTrailingComments(t));
@@ -506,27 +523,28 @@ class JavaParserGenerator extends ParserGenerator {
 
     for (List<Token> name : p.getThrowsList()) {
       writer.print(", ");
-      for (Iterator<Token> it2 = name.iterator(); it2.hasNext();) {
-        t = it2.next();
+      for (Token token : name) {
+        t = token;
         writer.print(t.image);
       }
     }
   }
 
   private void generatePhase2(Expansion e, PrintWriter writer, ParserData data) {
-    writer.println("  private boolean jj_2" + e.internal_name + "(int xla) {");
+    writer.println("  private boolean jj_2" + e.internalName() + "(int xla) {");
     writer.println("    jj_la = xla;");
     writer.println("    jj_lastpos = jj_scanpos = token;");
 
     String ret_suffix = (data.getDepthLimit() > 0) ? " && !jj_depth_error" : "";
 
     writer.println("    try {");
-    writer.println("      return (!jj_3" + e.internal_name + "()" + ret_suffix + ");");
+    writer.println("      return (!jj_3" + e.internalName() + "()" + ret_suffix + ");");
     writer.println("    } catch (LookaheadSuccess ls) {");
     writer.println("      return true;");
     if (data.getErrorReporting()) {
       writer.println("    } finally {");
-      writer.println("      jj_save(" + (Integer.parseInt(e.internal_name.substring(1)) - 1) + ", xla);");
+      writer.println(
+          "      jj_save(" + (Integer.parseInt(e.internalName().substring(1)) - 1) + ", xla);");
     }
     writer.println("    }");
     writer.println("  }");
@@ -534,11 +552,10 @@ class JavaParserGenerator extends ParserGenerator {
   }
 
   private void generatePhase3Routine(ParserData data, Expansion e, int count, PrintWriter writer) {
-    if (e.internal_name.startsWith("jj_scan_token")) {
+    if (e.internalName().startsWith("jj_scan_token"))
       return;
-    }
 
-    writer.println("  private boolean jj_3" + e.internal_name + "() {");
+    writer.println("  private boolean jj_3" + e.internalName() + "() {");
 
     if (data.getDepthLimit() > 0) {
       writer.println("if(++jj_depth > " + data.getDepthLimit() + ") {");
@@ -550,12 +567,12 @@ class JavaParserGenerator extends ParserGenerator {
 
     boolean xsp_declared = false;
     Expansion jj3_expansion = null;
-    if (data.getDebugLookahead() && (e.parent instanceof NormalProduction)) {
+    if (data.getDebugLookahead() && (e.parent() instanceof NormalProduction np)) {
       writer.print("    ");
       if (data.getErrorReporting()) {
         writer.print("if (!jj_rescan) ");
       }
-      writer.println("trace_call(\"" + Encoding.escapeUnicode(((NormalProduction) e.parent).getLhs(), Language.JAVA)
+      writer.println("trace_call(\"" + Encoding.escapeUnicode(np.getLhs(), Language.JAVA)
           + "(LOOKING AHEAD...)\");");
       jj3_expansion = e;
     }
@@ -572,120 +589,129 @@ class JavaParserGenerator extends ParserGenerator {
     writer.println();
   }
 
-  private boolean buildPhase3RoutineRecursive(ParserData data, Expansion jj3_expansion, boolean xsp_declared,
+  private boolean buildPhase3RoutineRecursive(ParserData data, Expansion jj3_expansion,
+      boolean xsp_declared,
       Expansion e, int count, PrintWriter writer) {
-    if (e.internal_name.startsWith("jj_scan_token")) {
+    if (e.internalName().startsWith("jj_scan_token")) {
       return xsp_declared;
     }
 
-    if (e instanceof RegularExpression) {
-      RegularExpression e_nrw = (RegularExpression) e;
-      writer.print("    if (jj_scan_token(");
-      if (e_nrw.getLabel().equals("")) {
-        Object label = data.getNameOfToken(e_nrw.getOrdinal());
-        writer.print((label == null) ? e_nrw.getOrdinal() : data.getParserName() + "Constants." + label);
-      } else {
-        writer.print(data.getParserName() + "Constants." + e_nrw.getLabel());
+    switch (e) {
+      case RExpression e_nrw -> {
+        writer.print("    if (jj_scan_token(");
+        if (e_nrw.getLabel().isEmpty()) {
+          Object label = data.getNameOfToken(e_nrw.getOrdinal());
+          writer.print(
+              (label == null) ? e_nrw.getOrdinal() : data.getParserName() + "Constants." + label);
+        }
+        else {
+          writer.print(data.getParserName() + "Constants." + e_nrw.getLabel());
+        }
+        writer.println("))");
+        writer.println("      " + genReturn(jj3_expansion, true, data));
       }
-      writer.println("))");
-      writer.println("      " + genReturn(jj3_expansion, true, data));
-    } else if (e instanceof NonTerminal) {
-      // All expansions of non-terminals have the "name" fields set. So
-      // there's no need to check it below for "e_nrw" and "ntexp". In
-      // fact, we rely here on the fact that the "name" fields of both these
-      // variables are the same.
-      NonTerminal e_nrw = (NonTerminal) e;
-      NormalProduction ntprod = data.getProduction(e_nrw.getName());
-      Expansion ntexp = ntprod.getExpansion();
-      writer.println("    if (" + genjj_3Call(ntexp) + ")");
-      writer.println("      " + genReturn(jj3_expansion, true, data));
-    } else if (e instanceof Choice) {
-      Sequence nested_seq;
-      Choice e_nrw = (Choice) e;
-      if (e_nrw.getChoices().size() != 1) {
+      case NonTerminal e_nrw -> {
+        // All expansions of non-terminals have the "name" fields set. So
+        // there's no need to check it below for "e_nrw" and "ntexp". In
+        // fact, we rely here on the fact that the "name" fields of both these
+        // variables are the same.
+        NormalProduction ntprod = data.getProduction(e_nrw.getName());
+        Expansion ntexp = ntprod.getExpansion();
+        writer.println("    if (" + genjj_3Call(ntexp) + ")");
+        writer.println("      " + genReturn(jj3_expansion, true, data));
+      }
+      case Choice e_nrw -> {
+        Sequence nested_seq;
+        if (e_nrw.getChoices().size() != 1) {
+          if (!xsp_declared) {
+            xsp_declared = true;
+            writer.println("    Token xsp;");
+          }
+          writer.println("    xsp = jj_scanpos;");
+        }
+
+        Token t = null;
+        for (int i = 0; i < e_nrw.getChoices().size(); i++) {
+          nested_seq = (Sequence) (e_nrw.getChoices().get(i));
+          Lookahead la = (Lookahead) (nested_seq.getUnits().getFirst());
+          if (!la.getActionTokens().isEmpty()) {
+            writer.println("    jj_lookingAhead = true;");
+            writer.print("    jj_semLA = ");
+            genTokenSetup((la.getActionTokens().getFirst()));
+            for (Token token : la.getActionTokens()) {
+              t = token;
+              writer.print(getStringToPrint(t));
+            }
+            writer.print(getTrailingComments(t));
+            writer.println(";");
+            writer.println("    jj_lookingAhead = false;");
+          }
+          writer.print("    if (");
+          if (!la.getActionTokens().isEmpty()) {
+            writer.print("!jj_semLA || ");
+          }
+          if (i != (e_nrw.getChoices().size() - 1)) {
+            writer.println(genjj_3Call(nested_seq) + ") {");
+            writer.println("      jj_scanpos = xsp;");
+          }
+          else {
+            writer.println(genjj_3Call(nested_seq) + ")");
+            writer.println("      " + genReturn(jj3_expansion, true, data));
+          }
+        }
+        for (int i = 1; i < e_nrw.getChoices().size(); i++) {
+          writer.println("    }");
+        }
+      }
+      case Sequence e_nrw -> {
+        // We skip the first element in the following iteration since it is the
+        // Lookahead object.
+        int cnt = count;
+        for (int i = 1; i < e_nrw.getUnits().size(); i++) {
+          Expansion eseq = (Expansion) (e_nrw.getUnits().get(i));
+          xsp_declared = buildPhase3RoutineRecursive(data, jj3_expansion, xsp_declared, eseq, cnt,
+              writer);
+          cnt -= data.minimumSize(eseq);
+          if (cnt <= 0) {
+            break;
+          }
+        }
+      }
+      case OneOrMore e_nrw -> {
         if (!xsp_declared) {
           xsp_declared = true;
           writer.println("    Token xsp;");
         }
-        writer.println("    xsp = jj_scanpos;");
-      }
-
-      Token t = null;
-      for (int i = 0; i < e_nrw.getChoices().size(); i++) {
-        nested_seq = (Sequence) (e_nrw.getChoices().get(i));
-        Lookahead la = (Lookahead) (nested_seq.getUnits().get(0));
-        if (la.getActionTokens().size() != 0) {
-          writer.println("    jj_lookingAhead = true;");
-          writer.print("    jj_semLA = ");
-          genTokenSetup((la.getActionTokens().get(0)));
-          for (Iterator<Token> it = la.getActionTokens().iterator(); it.hasNext();) {
-            t = it.next();
-            writer.print(getStringToPrint(t));
-          }
-          writer.print(getTrailingComments(t));
-          writer.println(";");
-          writer.println("    jj_lookingAhead = false;");
-        }
-        writer.print("    if (");
-        if (la.getActionTokens().size() != 0) {
-          writer.print("!jj_semLA || ");
-        }
-        if (i != (e_nrw.getChoices().size() - 1)) {
-          writer.println(genjj_3Call(nested_seq) + ") {");
-          writer.println("      jj_scanpos = xsp;");
-        } else {
-          writer.println(genjj_3Call(nested_seq) + ")");
-          writer.println("      " + genReturn(jj3_expansion, true, data));
-        }
-      }
-      for (int i = 1; i < e_nrw.getChoices().size(); i++) {
+        Expansion nested_e = e_nrw.getExpansion();
+        writer.println(
+            "    if (" + genjj_3Call(nested_e) + ") " + genReturn(jj3_expansion, true, data));
+        writer.println("    while (true) {");
+        writer.println("      xsp = jj_scanpos;");
+        writer.println("      if (" + genjj_3Call(nested_e) + ") { jj_scanpos = xsp; break; }");
         writer.println("    }");
       }
-    } else if (e instanceof Sequence) {
-      Sequence e_nrw = (Sequence) e;
-      // We skip the first element in the following iteration since it is the
-      // Lookahead object.
-      int cnt = count;
-      for (int i = 1; i < e_nrw.getUnits().size(); i++) {
-        Expansion eseq = (Expansion) (e_nrw.getUnits().get(i));
-        xsp_declared = buildPhase3RoutineRecursive(data, jj3_expansion, xsp_declared, eseq, cnt, writer);
-        cnt -= data.minimumSize(eseq);
-        if (cnt <= 0) {
-          break;
+      case ZeroOrMore e_nrw -> {
+        if (!xsp_declared) {
+          xsp_declared = true;
+          writer.println("    Token xsp;");
         }
+        Expansion nested_e = e_nrw.getExpansion();
+        writer.println("    while (true) {");
+        writer.println("      xsp = jj_scanpos;");
+        writer.println("      if (" + genjj_3Call(nested_e) + ") { jj_scanpos = xsp; break; }");
+        writer.println("    }");
       }
-    } else if (e instanceof OneOrMore) {
-      if (!xsp_declared) {
-        xsp_declared = true;
-        writer.println("    Token xsp;");
+      case ZeroOrOne e_nrw -> {
+        if (!xsp_declared) {
+          xsp_declared = true;
+          writer.println("    Token xsp;");
+        }
+        Expansion nested_e = e_nrw.getExpansion();
+        writer.println("    xsp = jj_scanpos;");
+        writer.println("    if (" + genjj_3Call(nested_e) + ") jj_scanpos = xsp;");
       }
-      OneOrMore e_nrw = (OneOrMore) e;
-      Expansion nested_e = e_nrw.getExpansion();
-      writer.println("    if (" + genjj_3Call(nested_e) + ") " + genReturn(jj3_expansion, true, data));
-      writer.println("    while (true) {");
-      writer.println("      xsp = jj_scanpos;");
-      writer.println("      if (" + genjj_3Call(nested_e) + ") { jj_scanpos = xsp; break; }");
-      writer.println("    }");
-    } else if (e instanceof ZeroOrMore) {
-      if (!xsp_declared) {
-        xsp_declared = true;
-        writer.println("    Token xsp;");
+      default -> {
       }
-      ZeroOrMore e_nrw = (ZeroOrMore) e;
-      Expansion nested_e = e_nrw.getExpansion();
-      writer.println("    while (true) {");
-      writer.println("      xsp = jj_scanpos;");
-      writer.println("      if (" + genjj_3Call(nested_e) + ") { jj_scanpos = xsp; break; }");
-      writer.println("    }");
-    } else if (e instanceof ZeroOrOne) {
-      if (!xsp_declared) {
-        xsp_declared = true;
-        writer.println("    Token xsp;");
-      }
-      ZeroOrOne e_nrw = (ZeroOrOne) e;
-      Expansion nested_e = e_nrw.getExpansion();
-      writer.println("    xsp = jj_scanpos;");
-      writer.println("    if (" + genjj_3Call(nested_e) + ") jj_scanpos = xsp;");
     }
     return xsp_declared;
   }
@@ -695,18 +721,21 @@ class JavaParserGenerator extends ParserGenerator {
     String retval = value ? "true" : "false";
     if (data.getDebugLookahead() && (expansion != null)) {
       String tracecode =
-          "trace_return(\"" + Encoding.escapeUnicode(((NormalProduction) expansion.parent).getLhs(), Language.JAVA)
+          "trace_return(\"" + Encoding.escapeUnicode(
+              ((NormalProduction) expansion.parent()).getLhs(), Language.JAVA)
               + "(LOOKAHEAD " + (value ? "FAILED" : "SUCCEEDED") + ")\");";
       if (data.getErrorReporting()) {
         tracecode = "if (!jj_rescan) " + tracecode;
       }
       return "{ " + tracecode + " return " + retval + "; }";
-    } else {
+    }
+    else {
       return "return " + retval + ";";
     }
   }
 
   private String genjj_3Call(Expansion e) {
-    return e.internal_name.startsWith("jj_scan_token") ? e.internal_name : "jj_3" + e.internal_name + "()";
+    var name = e.internalName();
+    return name.startsWith("jj_scan_token") ? name : "jj_3" + name + "()";
   }
 }
